[project]
name = "comfyui-Pollinations"
description = "ComfyUI integration for Pollinations API - Generate images and text with free and premium models (gptimage, kontext)"
version = "1.3.0"
license = {file = "LICENSE"}

dependencies = [
   "requests>=2.25.1",
    "pydub>=0.25.1"
]
    
[project.urls]
Repository = "https://github.com/1038lab/ComfyUI-Pollinations"

[tool.comfy]
PublisherId = "ailab"
DisplayName = "ComfyUI-Pollinations"
Icon = ""
